# VOTE

./: Cargo.toml  Makefile  deploy-config.toml  deploy.sh
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: index.html
scripts/: setup-compiler.sh
src/: lib.rs
tests/: Cargo.toml
tests/mock-token/: Cargo.toml
tests/mock-token/src/: lib.rs
tests/src/: lib.rs  tests.rs
