[workspace]
resolver = "2"
members = ["contract", "tests", "tests/mock-token"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
dusk-core = "1.3"
bytecheck = { version = "0.6", default-features = false }
rkyv = { version = "0.7", default-features = false, features = ["size_32"] }
rand = "0.8"
