[package]
name = "vote-contract"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dusk-core = { workspace = true }
bytecheck = { workspace = true }
rkyv = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
dusk-core = { version = "1.3", features = ["abi-dlmalloc"] }

[dev-dependencies]
rand = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
